--- a/Financialwebsite/MustRead.html
+++ b/Financialwebsite/MustRead.html
@@ -27,25 +27,25 @@
 			<td>经营分析</td>
 			<td>财务分析</td>
 			<td>盈利能力</td>
-			<td>资讯公告</td>
+			<td><a href="main.html">资讯公告</a></td>
 		</table>
 		<table border="0" width="1000px">
 			<tr>
-				<td>最新指标 |</td>
-				<td> 大事提醒 |</td>
-				<td> 资讯公告 |</td>
-				<td> 核心题材 |</td>
-				<td> 机构预测 |</td>
-				<td> 研报摘要 |</td>
-				<td> 估值分析 |</td>
-				<td> 主要指标 |</td>
-				<td> 股东分析 |</td>
-				<td> 龙虎榜单 |</td>
-				<td> 大宗交易 |</td>
-				<td> 融资融券 </td>
+				<td width="83px"> 最新指标 |</td>
+				<td width="83px"> 大事提醒 |</td>
+				<td width="83px"> 资讯公告 |</td>
+				<td width="83px"> 核心题材 |</td>
+				<td width="83px"> 机构预测 |</td>
+				<td width="83px"> 研报摘要 |</td>
+				<td width="83px"> 估值分析 |</td>
+				<td width="83px"> 主要指标 |</td>
+				<td width="83px"> 股东分析 |</td>
+				<td width="83px"> 龙虎榜单 |</td>
+				<td width="83px"> 大宗交易 |</td>
+				<td width="83px"> 融资融券 </td>
 			</tr>
 			<tr>
-				<td><a name="zuixinzhibiao">最新指标(根据今日总股本计算所得，综合考虑分红送转、增发、新股上市等情况，可能会与最新报告期不一致)</a></td>
+				<td colspan="12"><a name="zuixinzhibiao">最新指标(根据今日总股本计算所得，综合考虑分红送转、增发、新股上市等情况，可能会与最新报告期不一致)</a></td>
 			</tr>
 			<tr>
 				<table>
@@ -55,10 +55,113 @@
 						<th class="header" style="width: 183px;">指标名称</th>
 						<th class="header" style="width: 140px;">最新数据</th>
 						<th class="header" style="width: 164px;">指标名称</th>
-						<th class="header">最新数据</th>
+						<th class="header" style="width: 150px;">最新数据</th>
+					</tr>
+					<tr>
+						<td class="header">基本每股收益(元)*</td>
+						<td>28.6423</td>
+						<td class="header">每股净资产(元)*</td>
+						<td>159.9399</td>
+						<td class="header">每股经营现金流(元)</td>
+						<td>24.1898</td>
+					</tr>
+					<tr>
+						<td class="header">扣非每股收益(元)</td>
+						<td>28.6200</td>
+						<td class="header">每股公积金(元)</td>
+						<td>1.0945</td>
+						<td class="header">市盈率动(倍)</td>
+						<td>32.31</td>
+					</tr>
+					<tr>
+						<td class="header">稀释每股收益(元)</td>
+						<td>28.6400</td>
+						<td class="header">每股未分配利润(元)</td>
+						<td>129.9407</td>
+						<td class="header">市盈率TTM(倍)</td>
+						<td>33.75</td>
+					</tr>
+					<tr>
+						<td class="header">总股本(万股)</td>
+						<td>125,619.78</td>
+						<td class="header">流通股本(万股)</td>
+						<td>125,619.78</td>
+						<td class="header">市盈率静(倍)</td>
+						<td>37.08</td>
+					</tr>
+					<tr>
+						<td class="header">总市值(元)</td>
+						<td>2.325万亿</td>
+						<td class="header">流通市值(元)</td>
+						<td>2.325万亿</td>
+						<td class="header">市净率(倍)*</td>
+						<td>11.57</td>
+					</tr>
+					<tr>
+						<td colspan="6">数据来源:2023半年报，部分数据来自最新业绩快报;其中每股收益字段均以最新总股本计算得出，精确到小数点后四位，其余指标若发生股本变动等情况则将重新计算
+						</td>
 					</tr>
 				</table>
-
+				<table>
+					<tr>
+						<th class="header" style="width: 158px;">指标名称</th>
+						<th class="header" style="width: 69px;">最新数据</th>
+						<th class="header" style="width: 69px;">上年同期</th>
+						<th class="header" style="width: 210px;">指标名称</th>
+						<th class="header" style="width: 64px;">最新数据</th>
+						<th class="header" style="width: 64px;">上年同期</th>
+						<th class="header" style="width: 170px;">指标名称</th>
+						<th class="header" style="width: 69px;">最新数据</th>
+						<th class="header" style="width: 69px;">上年同期</th>
+					</tr>
+					<tr>
+						<td class="header">加权净资产收益率(%)</td>
+						<td>16.70</td>
+						<td>14.57</td>
+						<td class="header">毛利率(%)</td>
+						<td>91.80</td>
+						<td>92.11</td>
+						<td class="header">资产负债率(%)</td>
+						<td>13.39</td>
+						<td>17.26</td>
+					</tr>
+					<tr>
+						<td class="header">营业总收入(元)</td>
+						<td>709.9亿</td>
+						<td>594.4亿</td>
+						<td class="header">营业总收入滚动环比增长(%)</td>
+						<td>4.00</td>
+						<td>3.14</td>
+						<td class="header">营业总收入同比增长(%)</td>
+						<td>19.42</td>
+						<td>17.20</td>
+					</tr>
+					<tr>
+						<td class="header">归属净利润(元)</td>
+						<td>359.8亿</td>
+						<td>297.9亿</td>
+						<td class="header">归属净利润滚动环比增长(%)</td>
+						<td>3.98</td>
+						<td>3.32</td>
+						<td class="header">归属净利润同比增长(%) </td>
+						<td>20.76</td>
+						<td>20.85</td>
+					</tr>
+					<tr>
+						<td class="header">扣非净利润(元)</td>
+						<td>359.5亿</td>
+						<td>297.6亿</td>
+						<td class="header">扣非净利润滚动环比增长(%)</td>
+						<td>3.99</td>
+						<td>3.29</td>
+						<td class="header">扣非净利润同比增长(%)</td>
+						<td>20.78</td>
+						<td>20.75</td>
+					</tr>
+					<tr>
+						<td colspan="9">数据来源：2023半年报(最新数据)，2022半年报(上年同期)，部分数据来自最新业绩快报</td>
+					</tr>
+				</table>
 			</tr>
 		</table>
 	</body>
