--- a/Financialwebsite/MustRead.html
+++ b/Financialwebsite/MustRead.html
@@ -26,7 +26,7 @@
 			<td class="bluebackcolor">操盘必读</td>
 			<td>经营分析</td>
 			<td>财务分析</td>
-			<td>盈利能力</td>
+			<td>盈利预测</td>
 			<td><a href="main.html">资讯公告</a></td>
 		</table>
 		<table border="0" width="1000px">
@@ -45,7 +45,7 @@
 				<td width="83px"> 融资融券 </td>
 			</tr>
 			<tr>
-				<td colspan="12"><a name="zuixinzhibiao">最新指标(根据今日总股本计算所得，综合考虑分红送转、增发、新股上市等情况，可能会与最新报告期不一致)</a></td>
+				<td colspan="12" style="height: 50px;" class="TableTopBackColor"><a name="zuixinzhibiao">最新指标(根据今日总股本计算所得，综合考虑分红送转、增发、新股上市等情况，可能会与最新报告期不一致)</a></td>
 			</tr>
 			<tr>
 				<table>
@@ -98,7 +98,7 @@
 						<td>11.57</td>
 					</tr>
 					<tr>
-						<td colspan="6">数据来源:2023半年报，部分数据来自最新业绩快报;其中每股收益字段均以最新总股本计算得出，精确到小数点后四位，其余指标若发生股本变动等情况则将重新计算
+						<td colspan="6" class="TableNOTE">数据来源:2023半年报，部分数据来自最新业绩快报;其中每股收益字段均以最新总股本计算得出，精确到小数点后四位，其余指标若发生股本变动等情况则将重新计算
 						</td>
 					</tr>
 				</table>
@@ -159,7 +159,38 @@
 						<td>20.75</td>
 					</tr>
 					<tr>
-						<td colspan="9">数据来源：2023半年报(最新数据)，2022半年报(上年同期)，部分数据来自最新业绩快报</td>
+						<td colspan="9" class="TableNOTE">数据来源：2023半年报(最新数据)，2022半年报(上年同期)，部分数据来自最新业绩快报</td>
+					</tr>
+				</table>
+			</tr>
+			<tr>
+				<table><td class="TableTopBackColor" style="width: 1000px;">大事提醒</td></table> 
+				<!--怪事,不再嵌套一个表格CSS出不来-->
+			</tr>
+			<tr>
+				<table>
+					<tr>
+						<td width="100px">2023-09-07</td>
+						<td width="150px">股东大会</td>
+						<td width="750px">于2023-09-07召开2023年第一次临时股东大会</td>
+					</tr>
+					<tr>
+						<td width="100px">2023-09-01</td>
+						<td width="150px">融资融券</td>
+						<td width="750px">融资余额178.9亿元，融资买入额2.877亿元</td>
+					</tr>
+					<tr>
+						<td width="100px">2023-09-01</td>
+						<td width="150px">大宗交易</td>
+						<td width="750px">	2023-09-01共发生2笔大宗交易，总成交量8.53万股，总成交金额1.518亿元</td>
+					</tr>
+				</table>
+			</tr>
+			<tr>
+				<table>
+					<tr>
+						<td style="width: 500px; height: 50px;" class="TableTopBackColor" >相关资讯</td>
+						<td style="width: 500px; height: 50px;" class="TableTopBackColor" >相关公告</td>
 					</tr>
 				</table>
 			</tr>
