--- a/Financialwebsite/main.html
+++ b/Financialwebsite/main.html
@@ -24,7 +24,7 @@
 		</table>
 		<table width="1000px" border="1">
 			<td><a href="MustRead.html">操盘必读</a></td>
-			<td>经营分析</td>
+			<td><a href="Analysis.html">经营分析</a></td>
 			<td>财务分析</td>
 			<td>盈利预测</td>
 			<td class="bluebackcolor">资讯公告</td>
