--- a/Financialwebsite/MustRead.html
+++ b/Financialwebsite/MustRead.html
@@ -24,7 +24,7 @@
 		</table>
 		<table width="1000px" border="1">
 			<td class="bluebackcolor">操盘必读</td>
-			<td>经营分析</td>
+			<td><a href="Analysis.html">经营分析</a></td>
 			<td>财务分析</td>
 			<td>盈利预测</td>
 			<td><a href="main.html">资讯公告</a></td>
