--- a/Financialwebsite/main.html
+++ b/Financialwebsite/main.html
@@ -6,63 +6,71 @@
 		<link rel="stylesheet" type="text/css" href="css/Default.css" />
 	</head>
 	<body>
-		<table border="0" width="1000px">
-			<td class="bluebackcolor">600519</td>
-			<td class="bluebackcolor">贵州茅台</td>
-			<td>最新价：</td>
-			<td class="red">1851.05</td>
-			<td>涨跌：</td>
-			<td class="red">4.05</td>
-			<td>涨跌幅：</td>
-			<td class="red">0.22%</td>
-			<td>振幅</td>
-			<td>1.05%</td>
-			<td>成交量</td>
-			<td>13145</td>
-			<td>成交额</td>
-			<td>24.39亿</td>
-		</table>
-		<table width="1000px" border="1">
-			<td><a href="MustRead.html">操盘必读</a></td>
-			<td><a href="Analysis.html">经营分析</a></td>
-			<td>财务分析</td>
-			<td>盈利预测</td>
-			<td class="bluebackcolor">资讯公告</td>
-		</table>
-		<table style="width: 1000px;">
-			<tr>
-				<td style="width: 1000px; height: 50px;" class="TableTopBackColor" colspan="4">相关资讯</td>
-			</tr>
-			<tr>
-				<td style="width: 400px;">茅台与瑞幸联名咖啡明日全国上市</td>
-				<td style="width: 100px;"> 2023-09-03</td>
-				<td style="width: 400px;">贵州茅台：融资净偿还1064.01万元…</td>
-				<td style="width: 100px;"> 2023-09-02</td>
-			</tr>
-			<tr>
-				<td style="width: 400px;">暗藏茅台元素？瑞幸官宣：53度！</td>
-				<td style="width: 100px;">2023-09-02</td>
-				<td style="width: 400px;">贵州茅台发生2笔大宗交易…</td>
-				<td style="width: 100px;">2023-09-01</td>
-			</tr>
-			<tr>
-				<td style="width: 400px;">白酒股半年冷暖试水温：TOP6收割超九成</td>
-				<td style="width: 100px;">2023-09-02</td>
-				<td style="width: 400px;">沪深两市9月1日57只个股发生108笔大宗交…</td>
-				<td style="width: 100px;">2023-09-01</td>
-			</tr>
-			<tr>
-				<td style="width: 400px;">券商9月金股出炉：这些股获力挺 看好…</td>
-				<td style="width: 100px;">2023-09-02</td>
-				<td style="width: 400px;">北向资金大额抛售茅台五粮液？专家：短期…</td>
-				<td style="width: 100px;">2023-09-01</td>
-			</tr>
-			<tr>
-				<td style="width: 400px;">9月“十大金股”，谁最受关注？</td>
-				<td style="width: 100px;">2023-09-02</td>
-				<td style="width: 400px;">大宗交易：贵州茅台成交1.52亿元，折价3.8…</td>
-				<td style="width: 100px;">2023-09-01</td>
-			</tr>
-		</table>
+		<div class="mainpageHeader">
+			<table border="0" width="1000px">
+				<td class="bluebackcolor">600519</td>
+				<td class="bluebackcolor">贵州茅台</td>
+				<td style="text-align: right;">最新价：</td>
+				<td class="red">1851.05</td>
+				<td style="text-align: right;">涨跌：</td>
+				<td class="red">4.05</td>
+				<td style="text-align: right;">涨跌幅：</td>
+				<td class="red">0.22%</td>
+				<td style="text-align: right;">振幅：</td>
+				<td>1.05%</td>
+				<td style="text-align: right;">成交量：</td>
+				<td>13145</td>
+				<td style="text-align: right;">成交额：</td>
+				<td>24.39亿</td>
+			</table>
+		</div>
+		<div class="mainpageHeader">
+			<table width="1000px" border="1">
+				<tr align="center">
+					<td><a href="MustRead.html">操盘必读</a></td>
+					<td><a href="Analysis.html">经营分析</a></td>
+					<td>财务分析</td>
+					<td>盈利预测</td>
+					<td class="bluebackcolor">资讯公告</td>
+				</tr>
+			</table>
+		</div>
+		<div class="mainpage">
+			<table style="width: 1000px;">
+				<tr>
+					<td style="width: 1000px; height: 50px;" class="TableTopBackColor" colspan="4">相关资讯</td>
+				</tr>
+				<tr>
+					<td style="width: 400px;">茅台与瑞幸联名咖啡明日全国上市</td>
+					<td style="width: 100px;"> 2023-09-03</td>
+					<td style="width: 400px;">贵州茅台：融资净偿还1064.01万元…</td>
+					<td style="width: 100px;"> 2023-09-02</td>
+				</tr>
+				<tr>
+					<td style="width: 400px;">暗藏茅台元素？瑞幸官宣：53度！</td>
+					<td style="width: 100px;">2023-09-02</td>
+					<td style="width: 400px;">贵州茅台发生2笔大宗交易…</td>
+					<td style="width: 100px;">2023-09-01</td>
+				</tr>
+				<tr>
+					<td style="width: 400px;">白酒股半年冷暖试水温：TOP6收割超九成</td>
+					<td style="width: 100px;">2023-09-02</td>
+					<td style="width: 400px;">沪深两市9月1日57只个股发生108笔大宗交…</td>
+					<td style="width: 100px;">2023-09-01</td>
+				</tr>
+				<tr>
+					<td style="width: 400px;">券商9月金股出炉：这些股获力挺 看好…</td>
+					<td style="width: 100px;">2023-09-02</td>
+					<td style="width: 400px;">北向资金大额抛售茅台五粮液？专家：短期…</td>
+					<td style="width: 100px;">2023-09-01</td>
+				</tr>
+				<tr>
+					<td style="width: 400px;">9月“十大金股”，谁最受关注？</td>
+					<td style="width: 100px;">2023-09-02</td>
+					<td style="width: 400px;">大宗交易：贵州茅台成交1.52亿元，折价3.8…</td>
+					<td style="width: 100px;">2023-09-01</td>
+				</tr>
+			</table>
+		</div>
 	</body>
 </html>
