--- a/Financialwebsite/Analysis.html
+++ b/Financialwebsite/Analysis.html
@@ -38,12 +38,13 @@
 		<div class="mainpage">
 			<table>
 				<tr>
-					<td style="width: 450px; text-align: right;"><a href="fanwei">主营范围</a> |</td>
-					<td style="width: 100px; text-align: center;"><a href="fenxi">主营构成分析</a></td>
+					<td style="width: 450px; text-align: right;"><a href="#fanwei">主营范围</a> |</td>
+					<td style="width: 100px; text-align: center;"><a href="#fenxi">主营构成分析</a></td>
 					<td style="width: 450px; text-align: left;">| 经营评述</td>
 				</tr>
 			</table>
 		</div>
+		
 		<div class="mainpage">
 			<table>
 				<tr>
@@ -482,6 +483,16 @@
 							</tr>
 						</table>
 					</div>
+				</tr>
+			</table>
+		</div>
+		<div class="mainpage">
+			<table>
+				<tr> <td style="height: 50px;" class="TableTopBackColor"><a name="jinyin"><img src="img/Circle.png"/>经营分析<img src="img/Table.png"/></a></td></tr>
+				<tr>
+					<td>
+						今年以来,公司始终坚持以习近平新时代中国特色社会主义思想为指导,深入学习贯彻党的二十大精神、习近平总书记视察贵州重要讲话精神,以深入开展主题教育为契机,认真落实省委、省政府决策部署,聚焦集团公司“双翻番、双巩固、双打造”战略目标和年度既定目标任务,秉持“质量是生命之魂”,持续走好以茅台美学为价值内涵的“五线”高质量发展道路,统筹抓好生产经营和改革发展各项工作,经营指标保持了稳中有进、稳中向好的良好态势。报告期公司实现营业收入695.76亿元,同比增长20.76%;实现归属于上市公司股东的净利润359.80亿元,同比增长20.76%,为全面实现年度目标打下了坚实基础。报告期内主要做了以下工作:(一)构建协调发展的现代产业体系。坚守传统工法,加大技术攻关,持续加强生产全过程管控,公司生产稳定向好,报告期完成茅台酒基酒产量4.46万吨,系列酒基酒产量2.40万吨。深入实施“五合营销法”,持续优化产品结构,茅台全系产品带和价格带更加清晰,成功开发上市兔年生肖、“二十四节气”系列新产品,持续开展“茅台1935·喜相逢”等活动。截至报告期末“i茅台”累计注册用户已突破4200万,成为茅台数字营销的典范和主阵地。茅台冰淇淋推出三款新品,市场表现良好。加快推进茅台酒“十四五”技改、3万吨酱香系列酒技改、习水同民坝一期等项目建设,不断做足酒产业发展支撑。(二)构建和谐共生的绿色发展体系。一方面,永葆绿色品质。坚定树牢“质量是生命之魂”理念,深入践行“五匠”质量观,构建完善“365”质量管理体系,聚焦上下游,加快构建完善全过程、全要素、全链条的质量管控体系。另一方面,筑牢绿色屏障。公司围绕“一基地一标杆”总体目标,以构建“山水林土河微”生命共同体为抓手,深入实施“五大专项工程”“五大专项行动”,全面推进污水处理厂改造提升工作,完成冷却水循环利用系统、风冷系统、清污分流系统等重大治理工程,优化布局“三生”空间,有序推进园区生态防护林、绿色交通廊道等重点生态项目,积极配合地方政府,推进赤水河流域生态治理,切实守护好茅台赖以生存的生态环境。(三)构建强劲有力的现代治理体系。改革方面,持续推进对标世界一流企业管理提升行动,大力推进专业化、市场化、法治化、绿色化、数字化、国际化发展,稳妥推进治理体系、供应体系和营销体制改革,持续激发企业发展活力。公司入选国务院国资委新发布的“双百企业”。创新方面,全力开展好科技创新项目,打造更多高水平科研成果,成功申报国家级项目1项、省部级项目1项;持续推进打造“两室、两中心、一站”自主创新平台,完成茅台云平台、大数据平台建设,“智慧茅台”数字底座持续夯实。另外,公司持续推进人才建设“五项计划”“四项工程”,设立“茅台杰出人才奖”,引进了一批高层次人才,大力选拔培养核心人才,人才基础不断夯实。(四)构建美美与共的品牌文化体系。一方面,公司深刻把握“酒文化的极致”的内涵,持续开展走进“四大书院”、清明感恩大典以及二十四节气系列文化活动,茅台文化传播力持续彰显;持续打造二十四节气文化酒、生肖酒等文创产品,推动中华传统文化、中国酒文化和茅台文化创造性转化、创新性发展,文化赋能茅台高质量发展成效明显。另一方面,持续发挥领航优势,组织承办贵州白酒圆桌会,积极参与白酒T9峰会等,深化“各美其美、美美与共”的发展格局。坚持国企担当,积极履行社会责任,加大对道真帮扶,助力乡村振兴。(五)构建安全可控的风险防范体系。坚持统筹好发展与安全,全力确保高质量发展大局稳定。一是筑牢安全堤坝。聚焦“安全月”重点任务要求,围绕“火、电、土、房、水、车、物”等7大安全生产重点领域,优化“人防、物防、技防”三位一体措施,持续打造“全域、全时、全员”覆盖全产业链的网格化动态综合安全管理体系,安全态势总体稳定。二是坚持依法治企。推进法治茅台建设,强化依法治企和合规管理,推动法商融合,构建系统完备的法治工作体系,锻造出色精湛的法治专业能力,以法治护航茅台高质量发展。三是防范各类风险。持续健全全面风险管理体系,构建完善重点领域风险库,及时有效防范化解,确保企业发展稳定。
+					</td>
 				</tr>
 			</table>
 		</div>
