--- a/Financialwebsite/Analysis.html
+++ b/Financialwebsite/Analysis.html
@@ -140,7 +140,7 @@
 								<td class="content">45.45%</td>
 							</tr>
 						</table>
-						<table class="table">
+						<table>
 							<tr>
 								<th style="width: 10%;">2022-12-31</th>
 								<th>主营构成</th>
@@ -236,7 +236,7 @@
 								<td class="content">39.74%</td>
 							</tr>
 						</table>
-						<table class="table">
+						<table>
 							<tr>
 								<th style="width: 10%;">2022-06-30</th>
 								<th>主营构成</th>
@@ -311,7 +311,7 @@
 								<td class="content">12.17%</td>
 							</tr>
 						</table>
-						<table class="table">
+						<table>
 							<tr>
 								<th style="width: 10%;">2021-12-31</th>
 								<th>主营构成</th>
@@ -407,7 +407,7 @@
 								<td class="content">29.40%</td>
 							</tr>
 						</table>
-						<table class="table">
+						<table>
 							<tr>
 								<th style="width: 10%;">2021-06-30</th>
 								<th>主营构成</th>
