--- a/financial_report/Main_page.html
+++ b/financial_report/Main_page.html
@@ -118,7 +118,7 @@
         </div><br><br>
         
         <div>
-            <ul class="small-text" style="display: flex; flex-direction: row; list-style-type: none; justify-content: center;">
+            <ul class="small-text" style="display: flex; flex-direction: row; list-style-type: none; margin-left: 16em">
                 <li><a target="_blank" href="http://finance.eastmoney.com/">财经</a></li>
                 <li class="i">|</li>
                 <li><a target="_blank" href="http://finance.eastmoney.com/yaowen.html">要闻</a></li>
